<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicalInfo">


    <ImageView
        android:id="@+id/medicalInfoBackGround"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/backround_image_description"/>


    <ImageButton
        android:id="@+id/medicalInfoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:onClick="backHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/back_button_description"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/medicalInfoconstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/round_corners">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/medicalInfoHorizontalLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/medicalInfoGenderTxtLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/gender"
                        app:boxStrokeColor="@color/teal_200"
                        app:hintTextColor="@color/teal_700">


                        <AutoCompleteTextView
                            android:id="@+id/medicalInfoGenderDropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_gender"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/medicalInfoBloodTxtLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="32dp"
                        android:hint="@string/bloodType"
                        app:boxStrokeColor="@color/teal_200"
                        app:hintTextColor="@color/teal_700">


                        <AutoCompleteTextView
                            android:id="@+id/medicalInfoBloodDropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_bloodtype"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoHeightTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/height"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoBirthTxtLayout"
                    app:startIconDrawable="@drawable/ic_measure_height"
                    app:suffixText="cm">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoHeightEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoBirthTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/YearOfBirth"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/medicalInfoHorizontalLayout"
                    app:startIconDrawable="@drawable/ic_calendar">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoBirthEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="4" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoWeightTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/weight"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoHeightTxtLayout"
                    app:startIconDrawable="@drawable/ic_weight"
                    app:suffixText="kg">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoWeightEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoConditionTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/Condition"
                    app:boxStrokeColor="@color/teal_200"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoWeightTxtLayout"
                    app:startIconDrawable="@drawable/ic_health">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoConditionEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="100">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoAllergyTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/Allergy"
                    app:boxStrokeColor="@color/teal_200"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoConditionTxtLayout"
                    app:startIconDrawable="@drawable/ic_allergy">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoAllergyEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="100">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoTreatmentTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/CurrentTreatment"
                    app:boxStrokeColor="@color/teal_200"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoAllergyTxtLayout"
                    app:startIconDrawable="@drawable/ic_medicine">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoTreatmentEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="100">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/MedicalInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="20"
        android:text="@string/medicalCard"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicalInfoconstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>