...
    </string>
    <string name="medicalCard">My Medical Card</string>
    <string name="YearOfBirth">Year of birth*</string>
    <string name="gender">Gender*</string>
    <string name="height">Height*</string>
    <string name="weight">Weight*</string>
    <string name="yearTooRecent">Invalid year : You can not be born in the future </string>
    <string name="yearTooOld">Invalid year : You seem too old to be alive </string>
    <string name="heightTooShort">Invalid height : You seem too short </string>
    <string name="heightTooBig">Invalid height : You seem too big </string>
    <string name="weightTooLight">Invalid weight : You seem too light </string>
    <string name="weightTooHeavy">Invalid weight : You seem too heavy </string>
    <string name="Condition">Conditions </string>
    <string name="Allergy">Allergy </string>
    <string name="CurrentTreatment">Current Treatment </string>
    <string name="EmergencyContactName">Contact Name</string>
    <string name="EmergencyContactNumber">Phone Number</string>
    <string name="bloodType">Blood type*</string>
...
